@@ -71,6 +71,8 @@ server <- function(port=55555, password=NULL, maxretry=5, secure=has.sodium(), l
   set(password, password)
   set(secure, secure)
   
+  ### Backup default device
+  options(device.default = getOption("device")())
   if (userpng)
     options(device = remoter::rpng)
   
